New: Suche im Schulkatalog und Anlegen Lehrperson (#36)
Resolves: #19
Resolves: #20
